--- a/node/admin-service/package.json
+++ b/node/admin-service/package.json
@@ -1,11 +1,18 @@
 {
   "name": "fireflicks-admin-service",
   "version": "0.0.1",
+  "description": "FireFlicks admin service implementation in Node.js",
+  "license": "Apache-2.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/firebase/fireflicks"
+  },
   "scripts": {
     "build": "npm run build-ts && npm run tslint",
     "build-ts": "tsc",
     "serve": "node dist/app.js",
-    "tslint": "tslint -c tslint.json -p tsconfig.json"
+    "tslint": "tslint -c tslint.json -p tsconfig.json",
+    "upload-data": "node dist/upload.js"
   },
   "dependencies": {
     "express": "^4.16.2",
